kubernetes/rr-fam/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: rr-fam
spec:
  serviceName: radarr
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:4.1.0.6175-ls151
        ports:
        - containerPort: 7878
          name: web
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: false
        - name: media
          mountPath: /movies
          readOnly: false
        - name: downloads
          mountPath: /downloads
          readOnly: false
        # livenessProbe:
        #   tcpSocket:
        #     port: 7878
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # readinessProbe:
        #   tcpSocket:
        #     port: 7878
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "2000m"
      volumes:
      - name: downloads
        nfs:
          server: 10.1.0.200
          path: /volume1/dev/downloads
      - name: media
        nfs:
          server: 10.1.0.200
          path: /volume1/dev/media/tv
      - name: config
        persistentVolumeClaim:
          claimName: radarr-pvc
