kubernetes/rr-fam/radarr/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: rr-fam
  labels:
    name: radarr-svc
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
