kubernetes/rr-fam/radarr/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: rr-fam
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.kube.crowlight.com`)
      kind: Rule
      services:
        - name: radarr-svc
          port: 7878
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-tls
